eeepc-acpi-scripts (1.0.12) UNRELEASED; urgency=low

 -- Darren Salt <linux@youmustbejoking.demon.co.uk>  Mon, 02 Feb 2009 16:55:55 +0000

eeepc-acpi-scripts (1.0.11) unstable; urgency=low

  [ Ben Armstrong ]
  * VGA_ON and LVDS_OFF replace COMBINED_DISPLAY_SWITCHES to provide
    better default behaviour for VGA toggle.  See comments in
    /etc/default/eeepc-acpi-scripts for common variations (specify
    mode or use xinerama-style display).
  * Blacklist useless pcspkr module.
  * Fix VGA toggle: default to enable LVDS / disable VGA so that
    it will work when the external monitor is disconnected.

  [ Damyan Ivanov ]
  * when "soft-disabling" bluetooth, power down the USB port
  * improve long description a bit

  [ Raphael Geissert ]
  * test for OSD_SHOWN before checking for gnome-osd for consistency
  * add support for knotify but only use it if aosd_cat is not installed
    Closes: #513551 -- please add support for knotify
  * fix typo in notify()'s usage message
  * Add support for different suspend methods, but keep pm-suspend as the
    default.
    Closes: #499545 -- Configurable FnF1 key - suspend to ram or hibernate

 -- Damyan Ivanov <dmn@debian.org>  Mon, 02 Feb 2009 17:39:10 +0200

eeepc-acpi-scripts (1.0.10) unstable; urgency=low

  * add missing "--user $user" to dcop invocation.
    really closes: #499544

 -- Damyan Ivanov <dmn@debian.org>  Tue, 21 Oct 2008 22:44:32 +0300

eeepc-acpi-scripts (1.0.9) unstable; urgency=low

  * make package removal check depend on the functions.sh, not doc dir;
    streamline loading of functions and default file
    Closes: #499911 -- Don't test if /usr/share/doc/eeepc-acpi-scripts exist
  * source reorg.: move files for /etc/ in etc/
  * add modprobe.d/eeepc file with pciehp options
    Closes: #501498 -- Fn-F2 turns wireless off, but never back on
  * add a note in debian/NEWS about the new file in modprobe.d

 -- Damyan Ivanov <dmn@debian.org>  Sat, 11 Oct 2008 19:06:44 +0300
