@@ -1,5 +1,10 @@
 eeepc-acpi-scripts (1.0.12) UNRELEASED; urgency=low
 
+  * Detect who's running an X session by looking for a controlling process
+    with DISPLAY set in its environment.
+    This has a useful side effect: status changes can be displayed even when
+    the controlling process is a login manager.
+
  -- Darren Salt <linux@youmustbejoking.demon.co.uk>  Mon, 02 Feb 2009 16:55:55 +0000
 
 eeepc-acpi-scripts (1.0.11) unstable; urgency=low
